data/derived/comb/progs/unify/prog0469.ml.out
Characters 177-183:
  | (1,3) -> buildCosine(buildOp1(buildX(rand)))
                                        ^^^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type unit
